[ACPI] address boot-freeze with updated DMI blacklist for c-states

http://bugzilla.kernel.org/show_bug.cgi?id=4763

Signed-off-by: David Shaohua Li <shaohua.li@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>